src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Quote_Description__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <label>Quote Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rooms__Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to an external configuration card associated with line item.</inlineHelpText>
        <label>Configuration Card</label>
        <referenceTo>rooms__Card__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rooms__Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuration - Product Bundle Source</label>
        <referenceTo>rooms__Configuration__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rooms__DisplayOrder__c</fullName>
        <inlineHelpText>For use in sorting products when generating PDF quotes, agreements, or room HTML data grids.</inlineHelpText>
        <label>Display Order</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rooms__Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to an external configuration option associated with line item.</inlineHelpText>
        <label>Configuration Option</label>
        <referenceTo>rooms__Option__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>